[package]
name = "royalroad-dl"
version = "0.1.0"
authors = ["Easyoakland"]
edition = "2021"
description = "Incremental downloader for Royal Road"
readme = "README.md"
repository = "https://github.com/Easyoakland/royalroad-dl"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bpaf = { version = "0.9.9", features = ["derive"] }
ego-tree = "0.6.2"
leaky-bucket = "1.0.1"
regex = "1.10.3"
reqwest = "0.11.24"
scraper = { version = "0.18.1", features = ["deterministic"] }
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["macros", "fs"] }
url = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# Publish jobs to run in CI
pr-run-mode = "plan"
