[package]
name = "royalroad-dl"
version = "0.1.0"
authors = ["Easyoakland"]
edition = "2021"
description = "Incremental downloader for Royal Road"
readme = "README.md"
repository = "https://github.com/Easyoakland/royalroad-dl"
license = "MIT"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bpaf = { version = "0.9.9", features = ["derive"] }
ego-tree = "0.6.2"
leaky-bucket = "1.0.1"
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features= ["rustls-tls"]} # use rustls to make cross-compile simple for musl
scraper = { version = "0.18.1", features = ["deterministic"] }
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["macros", "fs"] }
url = "2.5.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
